ags (1.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: refactored AgsAutomationEditor
	* TODO:JK: implemented AgsScale, AgsScaleArray and AgsScrolledScaleArray in libags-gui
	* TODO:JK: implemented AgsWaveWindow, AgsWaveEditor, AgsWaveToolbar and AgsWaveEdit
	* TODO:JK: implemented AgsSelectAudioData and AgsPositionWaveCursor
	* TODO:JK: implemented AgsLevel
	* TODO:JK: implemented ags-capture recall
	* TODO:JK: implemented AgsAudiorec
	* extended chap1.xml added sections about AgsMainLoop and common interfaces

ags (1.2.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_channel_get_level()
	* implemented ags_channel_recursive_reset_recall_id()
	* implemented ags_channel_recursive_init()
	* implemented ags_channel_recursive_run()
	* implemented ags_channel_recursive_cancel()
	* refactored ags_channel_recursive_play_init()
	* refactored ags_channel_recursive_play()
	* refactored ags_channel_recursive_play_threaded()
	* refactored ags_channel_recursive_reset_recall_ids()
	* improved ags_channel_set_recycling()
	* improved ags_channel_recursive_reset_recycling_context()

ags (1.2.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* disable fatal mask
	* minor fixes

ags (1.2.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV due to NULL pointer dereference in ags_append_audio.c task

ags (1.2.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor-fixes

ags (1.2.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV in ags_channel_set_recycling() and make ags_functional_machine_link_test pass
	* rollback ags_channel_recursive_play_init(), ags_channel_recursive_play() and ags_channel_tillrecycling_cancel()

ags (1.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented async message AgsConnection:data-object and AgsAudioConnection:mapped-line
	* implemented ags_audio_disconnect()